Fix zoom in on mobile inputss

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   --toastify-color-progress-dark: var(--accent);
 }
 
+input, select, textarea {
+  font-size: 16px; 
+}
+
 html, body{
   height: 100%; 
 }
